# lexica

./: .gitignore  Cargo.toml  Justfile  README.md
corelib/: Cargo.toml
corelib/src/: lib.rs  rt.rs
corelib/src/datastore/: index.rs  kv.rs  mod.rs
corelib/src/files/: mod.rs  writer.rs
corelib/src/text/: mod.rs
grc/lsj/: lsj-entries.json
grc/lxx/: 1Chr.json  1Esd.json  1Kgs.json  1Macc.json  1Sam.json  2Chr.json  2Esd.json  2Kgs.json  2Macc.json  2Sam.json  3Macc.json  4Macc.json  Amos.json  Bar.json  BelOG.json  BelTh.json  DanOG.json  DanTh.json  Deut.json  Eccl.json  EpJer.json  Esth.json  Exod.json  Ezek.json  Gen.json  Hab.json  Hag.json  Hos.json  Isa.json  Jdt.json  Jer.json  Job.json  Joel.json  Jonah.json  JoshA.json  JoshB.json  JudgA.json  JudgB.json  Lam.json  Lev.json  (+19 more)
heb/bdb/: '  .words.json.swp  bdb.js  parts_of_speech.json  words.json
heb/bdb/clojure/: Makefile  deps.edn
heb/bdb/clojure/.cpcache/: 116200759.basis  116200759.cp  1184756812.basis  152386783.basis  1825400467.libs  2009054246.cp  2009054246.libs  2073428895.basis  622508066.basis  622508066.cp  622508066.libs
heb/bdb/clojure/src/: bdb.clj
heb/bdb/clojure/src/lexicon/: core.clj
heb/bdb/clojure/src/lexicon/attrs/: core.clj
heb/bdb/clojure/src/lexicon/content/: core.clj
heb/bdb/clojure/src/lexicon/entry/: core.clj
heb/bdb/clojure/src/lexicon/grammar/: core.clj
heb/bdb/clojure/src/lexicon/senses/: core.clj
heb/bdb/node/: bdb.js  flatten.js
text/: Cargo.toml
text/src/: lib.rs
text/src/extractor/: book.rs  mod.rs  text.rs
text/src/task/: manager.rs
(+1 files in other folders)
