[package]
name = "text"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Whittle <jonathan.m.whittle@gmail.com>"]

[[bin]]
name = "import"
test = false
bench = false

[dependencies]
anyhow = "1.0.68"
bincode = "1.3.3"
corelib = { path = "../corelib" }
flume = "0.10.14"
futures = "0.3.26"
futures-core = "0.3.26"
futures-util = "0.3.26"
mimalloc = { version = "0.1.34", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
structopt = "0.3.26"
sqlx = { version = "0.6.2", features = ["postgres", "chrono", "offline", "runtime-tokio-native-tls", "macros"], default-features = false }
tracing = { version = "0.1.37" }
tokio = { version = "1.25.0", features = ["full", "tracing"] }

[dev-dependencies]

[profile.dev.package.sqlx-macros]
opt-level = 3